# organic_web

./: .gitignore  LICENSE  README.md  TODO.md  check_provider.js  package-lock.json  package.json  vite.config.ts
backend/: chirality_service.py  debug_reaction.py  main.py  pyproject.toml  reaction_logic.py  reaction_service.py  requirements.txt  resonance_service.py  schemas.py  security.py  substitution_elimination.py  test_heat.py  test_manual_reaction.py  test_mech_safety.py  test_smiles.py
backend/engine/: __init__.py  branch_processing.py  carbocation.py  helpers.py  models.py  ozonolysis.py  reaction_logic.py  stereo.py  substitution_elimination.py
backend/reactions/: conditions.py  matcher.py  models.py  registry.py  rules.py
backend/tests/: conftest.py  reaction_meta_tests.json  sync_reactions.py  test_all_reactions.py  test_backend.py  test_reactions.py  test_server.py  test_server_chirality.py  test_server_reactions.py  test_server_resonance.py  test_stereo.py
docs/: ADDING_NOMENCLATURE_RULES.md  ADDING_REACTION_RULES_LLM.md
frontend/: README.md  index.html  inspect_exports.js  llm.txt  package-lock.json  package.json  reaction_data_extracted.json  tsconfig.json  vite.config.ts  vitest.extract.config.ts  vitest.setup.ts
frontend/public/: kekule-test.html  ketcher.html  main.js
frontend/scripts/: copy-wasm.js  extract_reaction_data.ts  extraction.test.ts
frontend/src/: App.css  App.tsx
public/: indigoWorker-1fee0714.js
scripts/: setup-ketcher.js
src/: App.css  App.tsx  index.css
src/components/: Cheatsheet.css  Cheatsheet.tsx  (+11 more)
(+71 files in other folders)
